--- a/docs/overview/acmconf.sty
+++ b/docs/overview/acmconf.sty
@@ -752,6 +752,6 @@
 
 \ps@plain
 \pagenumbering{arabic}  % Arabic page numbers
-\twocolumn              % Double column.
+\onecolumn              % Double column.
 \raggedbottom           % Ragged bottom
 
