--- a/src/debian/changelog
+++ b/src/debian/changelog
@@ -2,5 +2,5 @@ diamond (1.3.0-1) unstable; urgency=low
 
   * Initial release Closes: #nnnn  (nnnn is the bug number of your ITP)
 
- -- lily <lily@unknown>  Thu,  4 May 2006 15:35:30 -0400
+ -- diamond <diamond@cs.cmu.edu>  Thu,  4 May 2006 15:35:30 -0400
 
