added instructions for building RPMs

--- a/src/INSTALL
+++ b/src/INSTALL
@@ -199,11 +199,13 @@ Debian packaging files are in the debian subdirectory.  To build the
 debian packages from scratch, run the following from the Diamond 
 source diretory, which must be named diamond-<version>.
 
+	cp -pr src diamond-<version>
+	cd diamond-<version>
 	fakeroot debian/rules clean
 
 This will do a make clean.  Then build the source package.
 	cd ..
-	dpkg-source -b -sn  diamond-<version>
+	dpkg-source -ICVS -b -sn diamond-<version>
 
 This will create the source package, which consists of:
 	diamond_<version>.tar.gz (source tarball)
@@ -216,6 +218,7 @@ Build the binary package:
 This will create diamond_<version>_<arch>.deb in the directory above.
 
 
+
 Installing Debian packages
 --------------------------
 To install the binary package:
@@ -223,3 +226,18 @@ To install the binary package:
 
 To unpack the source package:
 	dpkg-source -x diamond-<version>.dsc
+
+
+Building RPMs
+-------------
+
+Use the alien package to build RPMs from debian files.
+To build the binary package:
+	alien -k -r diamond_<version>_<arch>.deb
+
+This will generate diamond-<version>.<arch>.rpm
+
+To build the source package:
+	alien -k -r diamond_<version>.tar.gz
+
+This will generate diamond_<version>.noarch.rpm
