--- a/src/debian/changelog
+++ b/src/debian/changelog
@@ -1,4 +1,4 @@
-diamond (1.3.0-1) unstable; urgency=low
+opendiamond (3.2.2-1) unstable; urgency=low
 
   * Initial release Closes: #nnnn  (nnnn is the bug number of your ITP)
 
